--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel='stylesheet' href='style.css'/>
     <title>👕 Clear Fahion | Environmentally & human-friendly clothes</title>
   </head>
   <body>
-    <h1>Clear fashion</h1>
+    <header id="header">
+        <h1>Clear fashion</h1>
+
+    </header>
+
+
     <section id="options">
+      <h2>Filters</h2>
       <div id="show">
         <label for="show-select">Show:</label>
         <select name="show" id="show-select">
@@ -20,8 +27,12 @@
         <select name="page" id="page-select"> </select>
       </div>
       <div id="filters">
-        <span>By reasonable price</span>
-        <span>By recently released</span>
+        <input type="checkbox" id="reasonable-price" name ="reasonable-price" checked=false>
+        <label for="reasonable-price">By reasonable price</label>
+        <input type="checkbox" id="recently-released" name ="recently-released" checked=false>
+        <label for="recently-released">By recently released</label>
+        <input type="checkbox" id="favorites" name ="favorites" checked=false>
+        <label for="favorites">By Favorites</label>
         <div id="brand">
           <label for="brand-select">By brands:</label>
           <select name="brand" id="brand-select"> </select>
@@ -40,28 +51,28 @@
     <section id="indicators">
       <h2>Indicators</h2>
       <div>
-        <span>Number of products</span>
+        <span>Number of products : </span>
         <span id="nbProducts">0</span>
       </div>
       <div>
-        <span>Number of new products</span>
-        <span>0</span>
+        <span>Number of new products : </span>
+        <span id="newProducts">0</span>
       </div>
       <div>
-        <span>p50 price value</span>
-        <span>0</span>
+        <span>p50 price value : </span>
+        <span id="p50">0</span>
       </div>
       <div>
-        <span>p90 price value</span>
-        <span>0</span>
+        <span>p90 price value : </span>
+        <span id="p90">0</span>
       </div>
       <div>
-        <span>p95 price value</span>
-        <span>0</span>
+        <span>p95 price value : </span>
+        <span id="p95">0</span>
       </div>
       <div>
-        <span>Last released date</span>
-        <span>2020-01-01</span>
+        <span>Last released date : </span>
+        <span id="last-release">2020-01-01</span>
       </div>
     </section>
     <section id="products"></section>
